# ticktick-automations

./: pyproject.toml
