[tool.poetry]
name = "ticktick-automations"
version = "0.1.0"
description = ""
authors = ["Anthony Agnone <anthonyagnone@gmai.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
python-dotenv = "^0.20.0"
watchdog = "^2.1.7"
Flask = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
